--- a/src/main/webapp/app/haku/haku.html
+++ b/src/main/webapp/app/haku/haku.html
@@ -1,8 +1,18 @@
 <div ng-controller="HakuController">
     <label class="margin-right-2" for="haku">{{ t('valintaryhmatlistaus.haku') || 'Haku' }}</label>
-    <select id="haku"
+
+    <!-- Show all hakus -->
+    <select auth ng-if="!userModel.isKKUser" id="haku"
             ng-model="hakuModel.haku"
             ng-options="haku.nimi.kieli_fi for haku in hakuModel.haut | orderBy:'nimi.kieli_fi'"
+            ng-change="changeHaku()">
+        <option value=""></option>
+    </select>
+
+    <!-- For KKUser filter out all other than KKHaut-->
+    <select auth ng-if="userModel.isKKUser" id="haku"
+            ng-model="hakuModel.haku"
+            ng-options="haku.nimi.kieli_fi for haku in hakuModel.haut | orderBy:'nimi.kieli_fi' | kkHakuFilter"
             ng-change="changeHaku()">
         <option value=""></option>
     </select>
