--- a/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
+++ b/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
@@ -82,7 +82,7 @@
         </div>
     </form>
     <div class="col-md-12">
-        <h3>Valintaryhmät ja hakukohteet </h3>
+        <h3>{{t('valintaperusteet.ryhmatjakohteet' || 'Valintaryhmät ja hakukohteet')}}</h3>
         <button class="btn btn-sm btn-default" ng-click="domain.expandTree()"><i class="fa fa-expand"></i> {{
             t('valintaryhmatlistaus.ravaapuu') || 'Avaa puu' }}
         </button>
