--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/laskentakaavaviiteAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/laskentakaavaviiteAsetuksetModal.html
@@ -14,7 +14,7 @@
             <div ng-if="valintaryhma.laskentakaavat" class="settingsform laskentakaavaviitteet">
                 <h3>{{ t('laskentakaavaviiteasetuksetmodal.valintaryhma') || 'Valintaryhmä' }}: {{valintaryhma.nimi}}</h3>
                 <div ng-if="kaava.id !== model.laskentakaavapuu.id" ng-repeat="kaava in valintaryhma.laskentakaavat | filter:getFunktioargumenttiSlotTyyppi(funktioasetukset.parentFunktiokutsu, funktioasetukset.selectedFunktioIndex)">
-                    <input ng-disabled="alikaavaValues.hasParentAlikaava === true" id="{{kaava.id}}" type="radio" name="laskentakaavaviite" ng-value="kaava.id"
+                    <input auth ng-disabled="alikaavaValues.hasParentAlikaava === true || !userAccess.updateOrg" id="{{kaava.id}}" type="radio" name="laskentakaavaviite" ng-value="kaava.id"
                            ng-change="setLaskentakaavaviite(kaava)" ng-model="laskentakaavaviite.selection.lapsi.id"/>
                     <label for="{{kaava.id}}" name="laskentakaavaviite">
                         {{kaava.nimi}} <a ng-click="sulje()" ng-href="#/valintaryhma/{{valintaryhma.oid}}/laskentakaavalista/laskentakaava/{{kaava.id}}"><i class="fa fa-pencil"></i></a>
@@ -27,7 +27,7 @@
     </div>
 </div>
 <div class="modal-footer">
-    <span ng-if="alikaavaValues.hasParentAlikaava !== true" class="btn btn-sm btn-default" ng-click="removeLaskentakaavaviite(); sulje()"><i class="fa fa-trash-o"></i> {{ t('laskentakaavaviiteasetuksetmodal.poista') || 'Poista laskentakaavaviite' }}</span>
+    <button ng-enable="alikaavaValues.hasParentAlikaava && userAccess.updateOrg" class="btn btn-sm btn-default" ng-click="removeLaskentakaavaviite(); sulje()"><i class="fa fa-trash-o"></i> {{ t('laskentakaavaviiteasetuksetmodal.poista') || 'Poista laskentakaavaviite' }}</button>
     <a class="btn btn-default btn-sm" ng-click="sulje();"
        role="button">{{ t('laskentakaavaviiteasetuksetmodal.sulje') || 'Sulje' }}</a>
 </div>
