--- a/src/main/webapp/app/valintakoe/valintakoelomake.html
+++ b/src/main/webapp/app/valintakoe/valintakoelomake.html
@@ -86,6 +86,22 @@
             </div>
         </div>
 
+        <div class="form-group" ng-show="model.valintakoe.kutsunKohde == 'HAKIJAN_VALINTA'">
+            <label class="control-label col-md-2" for="kohdeavain">{{ t('valintakoelomake.kohdeavain') || 'Lisäkysymyksen tunniste'
+                }}</label>
+            <div class="col-md-6">
+                <select class="form-control" auth ng-model="model.valintakoe.kutsunKohdeAvain" id="kohdeavain"
+                        ng-options="data.key as data.value for data in model.lisakysymysAvaimet"
+                        ng-disabled="!userAccess.updateOrg">
+                    <option value=""></option>
+                </select>
+                <br />
+                <span>{{model.valintakoe.kutsunKohdeAvain}}</span>
+            </div>
+        </div>
+
+
+
         <div class="form-group">
 
             <div>
