--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="valintaryhma/valintakoekoodit.js"></script>
     <script type="text/javascript" src="valintaryhma/hakukohdekoodit.js"></script>
     <script type="text/javascript" src="valintaryhma/valintaryhma_uusi.js"></script>
-    <script type="text/javascript" src="laskentakaavaModel.js"></script>
+    <script type="text/javascript" src="laskentakaavat/laskentakaavaModel.js"></script>
     <script type="text/javascript" src="hakijaryhma/hakijaryhma.js"></script>
     <script type="text/javascript" src="hakukohde/hakukohde.js"></script>
     <script type="text/javascript" src="hakukohde/hakukohde_uusi.js"></script>
