VT-1016: valintaryhmälomakkeelle lisätty modali, johon valintaryhmähierarkian kopioinnin voi tehdä

--- a/src/main/webapp/app/valintaryhma/hakijaryhmaKopiointiModal.html
+++ b/src/main/webapp/app/valintaryhma/hakijaryhmaKopiointiModal.html
@@ -1,10 +1,10 @@
 <div class="modal-header">
-    <h3>Hakijaryhmän kopiointi toiseen valintaryhmään</h3>
+    <h3>{{t('valintaryhmalomake.kopioi.hakijaryhma.otsikko') || 'Hakijaryhmän kopiointi toiseen valintaryhmään'}}</h3>
 </div>
 <div class="modal-body">
     <form class="form-horizontal" name="kaavakopio">
         <div class="form-group">
-            <label class="col-sm-4 control-label" for="uusinimi">Kopioitavan hakijaryhmän nimi</label>
+            <label class="col-sm-4 control-label" for="uusinimi">{{t('valintaryhmalomake.kopioi.hakijaryhma.nimi') || 'Kopioitavan hakijaryhmän nimi'}}</label>
 
             <div class="col-sm-8">
                 <input ng-required="!nimi" type="text" id="uusinimi" class="form-control" ng-model="model.uusinimi"/>
@@ -16,6 +16,6 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-sm btn-default" ng-click="sulje()">Peruuta</button>
-    <button ng-click="kopioiHakijaryhma()" ng-disabled="kaavakopio.$invalid" class="btn btn-sm btn-primary">Kopioi</button>
+    <button class="btn btn-sm btn-default" ng-click="sulje()">{{ t('valintaperusteet.sulje') || 'Sulje'}}</button>
+    <button ng-click="kopioiHakijaryhma()" ng-disabled="kaavakopio.$invalid" class="btn btn-sm btn-primary">{{t('valintaperusteet.kopioi') || 'Kopioi'}}</button>
 </div>
