--- a/src/main/webapp/app/laskentakaavat/listaus/kaavakopiointiModal.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/kaavakopiointiModal.html
@@ -6,7 +6,7 @@
         <div class="form-group">
             <label class="col-sm-4 control-label" for="uusinimi">Uuden kaavan nimi</label>
             <div class="col-sm-8">
-                <input ng-required="!nimi" type="text" id="uusinimi" class="form-control" ng-model="kaavaKopioParams.uusinimi"/>
+                <input ng-required="!nimi" type="text" id="uusinimi" class="form-control" ng-model="kopioObj.uusinimi"/>
             </div>
         </div>
 
