VT-980: laskentakaavojen validoinnin refaktorointia

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -3,6 +3,10 @@
 
 
     <div class="gradingformula">
+asdfasdf
+        <validation-errors></validation-errors>
+asdfasdf
+
         <!-- Laskentakaavassa olevat virheet-->
         <div class="alert alert-danger margin-top-2" collapse="errors.length === 0 && commonErrors.length === 0">
             <h3>{{ t('laskentakaavapuu.eitalletettu') || 'Laskentakaavaa ei voitu tallentaa.' }}</h3>
