--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/laskentakaavaviiteAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/laskentakaavaviiteAsetuksetModal.html
@@ -8,7 +8,21 @@
     <span>{{ t('laskentakaavaviiteasetuksetmodal.nimi') || 'Valitun laskentakaavaviitteen nimi' }}: {{laskentakaavaviite.selection.lapsi.nimi}}</span>
     <div ng-if="alikaavaValues.hasParentAlikaava === true" class="alert alert-info margin-top-2">{{ t('laskentakaavaviiteasetuksetmodal.eivoivaihtaa') || 'Alikaavan laskentakaavaviitteitä ei voi vaihtaa. Voit kuitenkin siirtyä suoraan valitsemasi laskentakaavan muokkaukseen kynä-ikonista.' }}</div>
 
+    <div class="margin-top-2" ng-repeat="hakukohde in laskentakaavalista.hakukohdeList()">
+        <div ng-if="hakukohde.laskentakaavat" class="settingsform laskentakaavaviitteet">
+            <h3>{{ t('laskentakaavaviiteasetuksetmodal.hakukohde') || 'Hakukohde' }}: {{hakukohde.nimi}}</h3>
+            <div ng-if="kaava.id !== model.laskentakaavapuu.id" ng-repeat="kaava in hakukohde.laskentakaavat | filter:getFunktioargumenttiSlotTyyppi(funktioasetukset.parentFunktiokutsu, funktioasetukset.selectedFunktioIndex)">
+                <input auth ng-disabled="alikaavaValues.hasParentAlikaava === true || !userAccess.updateOrg" id="{{kaava.id}}" type="radio" name="laskentakaavaviite" ng-value="kaava.id"
+                       ng-change="setLaskentakaavaviite(kaava)" ng-model="laskentakaavaviite.selection.lapsi.id"/>
+                <label for="{{kaava.id}}" name="laskentakaavaviite">
+                    {{kaava.nimi}} <a ng-click="sulje()" ng-href="#/valintaryhma/{{valintaryhma.oid}}/laskentakaavalista/laskentakaava/{{kaava.id}}"><i class="fa fa-pencil"></i></a>
+                </label>
+            </div>
+        </div>
+    </div>
+
     <div class="margin-top-2" ng-repeat="valintaryhmaList in laskentakaavalista.valintaryhmaList()">
+
 
         <div ng-repeat="valintaryhma in valintaryhmaList">
             <div ng-if="valintaryhma.laskentakaavat" class="settingsform laskentakaavaviitteet">
@@ -27,7 +41,7 @@
     </div>
 </div>
 <div class="modal-footer">
-    <button ng-enable="alikaavaValues.hasParentAlikaava && userAccess.updateOrg" class="btn btn-sm btn-default" ng-click="removeLaskentakaavaviite(); sulje()"><i class="fa fa-trash-o"></i> {{ t('laskentakaavaviiteasetuksetmodal.poista') || 'Poista laskentakaavaviite' }}</button>
+    <button ng-enable="!alikaavaValues.hasParentAlikaava && userAccess.updateOrg" class="btn btn-sm btn-default" ng-click="removeLaskentakaavaviite(); sulje()"><i class="fa fa-trash-o"></i> {{ t('laskentakaavaviiteasetuksetmodal.poista') || 'Poista laskentakaavaviite' }}</button>
     <a class="btn btn-default btn-sm" ng-click="sulje();"
        role="button">{{ t('laskentakaavaviiteasetuksetmodal.sulje') || 'Sulje' }}</a>
 </div>
