--- a/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
+++ b/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
@@ -24,7 +24,7 @@
 
 <!--Leaf template -->
 <script type="text/ng-template" id="hakukohde_leaf.html">
-    <div class="node"><i class="fa fa-building-o"></i><a href="#/hakukohde/{{data.oid}}">{{data.nimi}}
+    <div ng-if="data.hakuOid === hakuModel.hakuOid" class="node"><i class="fa fa-building-o"></i><a href="#/hakukohde/{{data.oid}}">{{data.nimi}}
         ({{data.tila}})</a></div>
 </script>
 
