--- a/src/main/webapp/app/User/user.html
+++ b/src/main/webapp/app/User/user.html
@@ -82,13 +82,18 @@
             <label class="control-label col-md-2">Organization Utility</label>
 
             <div class="col-md-10">
-                <button class="btn btn-sm btn-default" ng-click="getOrganizations()">Fetch organizations for this
-                    <span ng-if="isValintaryhma">valintaryhma</span>
-                    <span ng-if="isHakukohde">Hakukohde</span></button>
+                <button class="btn btn-sm btn-default" ng-click="getOrganizations()">Fetch organizations for <span ng-if="isValintaryhma">valintaryhma</span>
+                    <span ng-if="isHakukohde">hakukohde</span>
+                    </button>
                 <button ng-show="vrhkOrgs" class="btn btn-sm btn-default" ng-click="allData = !allData" ng-init="allData = false">show all data</button>
-
+                <p ng-show="vrhkOrgs >= 0">
+                    <span ng-if="isValintaryhma">valintaryhma</span>
+                    <span ng-if="isHakukohde">Hakukohde</span>- Organisaatioden määrä: {{vrhkOrgs.length}}</p>
                 <ul>
-                    <li ng-repeat="vrhkOrg in vrhkOrgs"><span ng-show="allData">{{vrhkOrg}}</span><span ng-show="!allData">{{vrhkOrg.oid}} - {{vrhkOrg.nimi.fi}}</span></li>
+                    <li ng-repeat="vrhkOrg in vrhkOrgs">
+                        <span ng-show="allData">{{vrhkOrg}}</span>
+                        <span ng-show="!allData">{{vrhkOrg.oid}} - {{vrhkOrg.nimi.fi}}</span>
+                    </li>
                 </ul>
 
             </div>
