--- a/src/main/webapp/app/User/user.html
+++ b/src/main/webapp/app/User/user.html
@@ -20,8 +20,8 @@
                     <tr>
                         <th></th>
                         <th>CRUD</th>
-                        <th>ORG</th>
-                        <th>APP</th>
+                        <th>UPDATE</th>
+                        <th>READ</th>
                     </tr>
                     </thead>
                     <tbody>
